added the forgot password functionality and is connected to frontend and working properly, completed using nodemaailer, all done,

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGODB_URI="mongodb+srv://shreyash:Shrey%40sh%32%32mar@cluster0.4wcleh6.mongodb.net/?retryWrites=true&w=majority"
+CLIENT_URL="http://localhost:3000"
+EMAIL_ADDRESS="shreyash.dhamane@spit.ac.in"
+EMAIL_PASSWORD="Shreyash22mar"
