--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "argon2": "^0.29.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "nodemailer": "^6.8.0"
   }
 }
