--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "argon2": "^0.29.1",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.32.0",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
+    "next": "^12.3.1",
     "nodemailer": "^6.8.0"
   }
 }
