--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.29.1",
     "axios": "^1.1.3",
     "body-parser": "^1.20.0",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.32.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
@@ -30,6 +31,7 @@
     "newsapi": "^2.4.1",
     "next": "^12.3.1",
     "nodemailer": "^6.8.0",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "selenium-webdriver": "^4.6.1"
   }
 }
