--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "mocha"
+    
+    
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,8 @@
     "argon2": "^0.29.1",
     "axios": "^1.1.3",
     "body-parser": "^1.20.0",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cloudinary": "^1.32.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
@@ -26,10 +31,13 @@
     "google-translate": "^2.2.0",
     "jsdom": "^20.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.1.0",
     "mongoose": "^6.6.1",
     "newsapi": "^2.4.1",
     "next": "^12.3.1",
     "nodemailer": "^6.8.0",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "react": "^18.2.0"
   }
+  
 }
