--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "test": "mocha --timeout 10000",
-    "build": "webpack",
+    "build": "webpack --watch",
     "start": "node app.js"
   },
   "keywords": [],
@@ -35,7 +35,8 @@
     "nodemailer": "^6.8.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
-    "selenium-webdriver": "^4.6.1"
+    "selenium-webdriver": "^4.6.1",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
