--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "newsapi": "^2.4.1",
-    "next": "^12.3.1",
     "nodemailer": "^6.8.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "selenium-webdriver": "^4.6.1",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
